--- a/Consultivazione/Consuntivazione.vbproj
+++ b/Consultivazione/Consuntivazione.vbproj
@@ -97,11 +97,29 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmClienti.Designer.vb">
+      <DependentUpon>frmClienti.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmClienti.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCommesse.Designer.vb">
+      <DependentUpon>frmCommesse.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmCommesse.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmConsuntivazione.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmConsuntivazione.Designer.vb">
       <DependentUpon>frmConsuntivazione.vb</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmInserisciCliente.Designer.vb">
+      <DependentUpon>frmInserisciCliente.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmInserisciCliente.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmModifica.Designer.vb">
@@ -127,8 +145,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmClienti.resx">
+      <DependentUpon>frmClienti.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmConsuntivazione.resx">
       <DependentUpon>frmConsuntivazione.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmInserisciCliente.resx">
+      <DependentUpon>frmInserisciCliente.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmModifica.resx">
       <DependentUpon>frmModifica.vb</DependentUpon>
