--- a/Consultivazione/App.config
+++ b/Consultivazione/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Consultivazione.My.MySettings.ConsultivazioneConnectionString"
+        <add name="Consuntivazione.My.MySettings.ConsultivazioneConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Consultivazione.accdb"
             providerName="System.Data.OleDb" />
     </connectionStrings>
