inclusa cartella Documentazione

--- a/Consultivazione/Consuntivazione.vbproj
+++ b/Consultivazione/Consuntivazione.vbproj
@@ -21,7 +21,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>3</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -233,9 +233,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\Debug\" />
-    <Folder Include="Documentazione\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Documentazione\documentazione.html" />
+    <Content Include="Documentazione\Immagini\clienti.png" />
+    <Content Include="Documentazione\Immagini\commesse.png" />
+    <Content Include="Documentazione\Immagini\dividiCliente.png" />
+    <Content Include="Documentazione\Immagini\homePage.png" />
+    <Content Include="Documentazione\Immagini\insClientiCommesse.png" />
+    <Content Include="Documentazione\Immagini\visMensile.png" />
+    <Content Include="Documentazione\javaScript.js" />
+    <Content Include="Documentazione\style.css" />
     <Content Include="icona.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
