Bug Fix: - Inclusa cartella 'Template' al progetto

--- a/Consultivazione/Consuntivazione.vbproj
+++ b/Consultivazione/Consuntivazione.vbproj
@@ -21,7 +21,7 @@
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>4</ApplicationRevision>
+    <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -218,8 +218,8 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="Template\Template_Commesse.xlsx" />
-    <None Include="Template\Template_Ticket.xlsx" />
+    <Content Include="Template\Template_Commesse.xlsx" />
+    <Content Include="Template\Template_Ticket.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
