--- a/Consultivazione/Config/config.ini
+++ b/Consultivazione/Config/config.ini
@@ -5,5 +5,8 @@ Form_BackColor=#f0f0f0
 From_ForeColor=#0a0a0a
 [IconColor]
 IconsColor=white
-[Path]
-DB_PATH=
+[ConfigImp]
+DB_PATH=C:\Users\u1138\Documents\1.Documenti vari\Altro\DatabaseConsuntivazione\Consuntivazione.accdb
+DB_DEFAULT=C:\Users\u1138\Documents\Altro\Consuntivazione\published\Database\Consuntivazione.accdb
+AggAutGiornoAttuale=True
+AggAutDettaglio=False
