--- a/Consultivazione/Config/configDefault.ini
+++ b/Consultivazione/Config/configDefault.ini
@@ -5,5 +5,8 @@ Form_BackColor=#f0f0f0
 From_ForeColor=#0a0a0a
 [IconColor]
 IconsColor=white
-[Path]
+[ConfigImp]
 DB_PATH=
+DB_DEFAULT=
+AggAutGiornoAttuale=True
+AggAutDettaglio=True
