Bug Fix: - corretto errore di formattazione data in modifica - impostato .Trim su tutti i valori inseribili - corretto raggruppamento di commesse con note Extra Release: - Nuova visualizzazione del tempo Extra tramite ToolTip - Data Da dei filtri è stata impostata come minore di 2 anni ad oggi di default.

--- a/Consultivazione/Config/config.ini
+++ b/Consultivazione/Config/config.ini
@@ -6,7 +6,7 @@ From_ForeColor=#0a0a0a
 [IconColor]
 IconsColor=white
 [ConfigImp]
-DB_PATH=C:\Users\u1138\Documents\1.Documenti vari\Altro\DatabaseConsuntivazione\Consuntivazione.accdb
+DB_PATH=Z:\Consuntivazione.accdb
 DB_DEFAULT=C:\Users\u1138\Documents\Altro\Consuntivazione\published\Database\Consuntivazione.accdb
-AggAutGiornoAttuale=True
+AggAutGiornoAttuale=False
 AggAutDettaglio=False
