Modificati percorsi file in modo da rendere portable l'applicazione.
Bug Fix:
- Reimpostare la data della pagina di inserimento al giorno attuale dopo il passaggio dal Dettaglio
- Inserito controllo di esistenza durante la modifica Cliente

--- a/Consultivazione/Config/config.ini
+++ b/Consultivazione/Config/config.ini
@@ -6,7 +6,7 @@ From_ForeColor=#0a0a0a
 [IconColor]
 IconsColor=white
 [ConfigImp]
-DB_PATH=Z:\Consuntivazione.accdb
-DB_DEFAULT=C:\Users\u1138\Documents\Altro\Consuntivazione\published\Database\Consuntivazione.accdb
+DB_PATH=C:\Users\Flavietto\Documents\Altro\Consuntivazione_Portable\Resources\Database\Consuntivazione.accdb
+DB_DEFAULT=
 AggAutGiornoAttuale=False
 AggAutDettaglio=False
